; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_IsMyIPAddress.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_IsMyIPAddress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsMyIPAddress(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 0, i32* %6, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %35

11:                                               ; preds = %1
  %12 = call i32* (...) @GetHostIPAddressList()
  store i32* %12, i32** %4, align 8
  store i64 0, i64* %5, align 8
  br label %13

13:                                               ; preds = %28, %11
  %14 = load i64, i64* %5, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = call i64 @LIST_NUM(i32* %15)
  %17 = icmp slt i64 %14, %16
  br i1 %17, label %18, label %31

18:                                               ; preds = %13
  %19 = load i32*, i32** %4, align 8
  %20 = load i64, i64* %5, align 8
  %21 = call i32* @LIST_DATA(i32* %19, i64 %20)
  store i32* %21, i32** %7, align 8
  %22 = load i32*, i32** %3, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = call i64 @CmpIpAddr(i32* %22, i32* %23)
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %18
  store i32 1, i32* %6, align 4
  br label %31

27:                                               ; preds = %18
  br label %28

28:                                               ; preds = %27
  %29 = load i64, i64* %5, align 8
  %30 = add nsw i64 %29, 1
  store i64 %30, i64* %5, align 8
  br label %13

31:                                               ; preds = %26, %13
  %32 = load i32*, i32** %4, align 8
  %33 = call i32 @FreeHostIPAddressList(i32* %32)
  %34 = load i32, i32* %6, align 4
  store i32 %34, i32* %2, align 4
  br label %35

35:                                               ; preds = %31, %10
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32* @GetHostIPAddressList(...) #1

declare dso_local i64 @LIST_NUM(i32*) #1

declare dso_local i32* @LIST_DATA(i32*, i64) #1

declare dso_local i64 @CmpIpAddr(i32*, i32*) #1

declare dso_local i32 @FreeHostIPAddressList(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
